test/files/neg/cycle-bounds.check
cycle-bounds.scala:7: error: illegal cyclic reference involving type T
class NotOk[T <: Comparable[_ <: T]]
                            ^
1 error
